# openrelik-worker-chopchopgo

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image.yaml
src/: app.py  tasks.py
tests/: test_chopchopgo_integration.py  test_tasks.py
