[project]
authors = [
    {name = "OpenRelik Maintainers", email = "oss@openrelik.org"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-worker-common<1.0.0,>=0.16.0",
]
name = "openrelik-worker-chopchopgo"
version = "0.1.0"
description = "OpenRelik worker that wraps ChopChopGo for Linux log analysis"
readme = "README.md"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
